--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/gfrise/NodeJS#readme",
   "dependencies": {
+    "@prisma/client": "^4.7.1",
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "express": "^4.18.2"
@@ -31,6 +32,7 @@
     "@types/node": "^18.11.11",
     "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
+    "prisma": "^4.7.1",
     "supertest": "^6.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
