--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT = 5342
+PORT = 3000
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -7,4 +7,4 @@ PORT = 5342
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://giuseppefrisella:ciao@localhost:5432/space_facts?schema=public"
+DATABASE_URL="postgresql://development:development@localhost:5432/spacefacts?schema=public"
