--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@prisma/client": "^4.7.1",
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest-mock-extended": "^3.0.1"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
