--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/gfrise/NodeJS#readme",
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "ajv-formats": "^2.1.1",
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "express-json-validator-middleware": "^3.0.1",
     "jest-mock-extended": "^3.0.1"
   },
   "devDependencies": {
